overflow fix

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow:hidden
+    overflow:hidden;
 }
 
 .placeholder-label{
@@ -387,13 +387,22 @@ input:focus {
 
 
 @media only screen and (max-width: 892px) {
-  main{
-    padding:24px 24px;
+  body{
     overflow: scroll;
+    overflow-x: hidden;
+  }
+  main{
+    height: max-content;
+    min-height: 100vh;
+    padding:24px 24px;
+    /* overflow: scroll; */
+    
+    /* min-height: fit-content; */
   }
   .total-container{
     padding: 24px 24px;
-    
+    overflow: scroll;
+    height: fit-content;
   }
   .form-container{
     width: 90vw;
@@ -412,6 +421,7 @@ input:focus {
     flex-direction: column;
     gap: 16px;
     margin: auto;
+    overflow: scroll;
   }
   .note{
     max-width: 100%;
